--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 alabaster==0.7.9
-anaconda-client==1.6.0
-anaconda-navigator==1.4.3
+# anaconda-client==1.6.0
+# anaconda-navigator==1.4.3
 argcomplete==1.0.0
 astroid==1.4.9
 astropy==1.3
