--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ blaze==0.10.1
 bokeh==0.12.4
 boto==2.45.0
 Bottleneck==1.2.0
-cdecimal==2.3
+# cdecimal==2.3
 cffi==1.9.1
 chardet==2.3.0
 chest==0.2.3
